# PR_chatbot

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  template.py  ui.py
src/core/: ingest.py  models.py  rag_chain.py  retriever.py
src/tests/: test_rag.py  test_retriever.py
src/utils/: file_loader.py  helpers.py
